# rsomics-sc-normalize

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs  scanpy_normalize_oracle.py
tests/golden/: make_golden.py  scanpy_normalize.mtx
